<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ryou.appryous.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.ryou.appryous.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.ryou.appryous.ui.archive.ArchiveFragment"
        android:label="@string/nav_archive"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.ryou.appryous.ui.category.CategoryFragment"
        android:label="@string/nav_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ryou.appryous.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
